working model, few bugs

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Hack Night Project</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_transparent_actvity">TransparentActvity</string>
 
 </resources>
